# caddy_bot

./: .gitignore  Assembly 2-3.stl  README.md  burger_base-2.stl  burger_base-3.stl  burger_base-4.stl
caddy_bot/: CMakeLists.txt  package.xml
caddy_bot/config/: imu_filter.yaml
caddy_bot/launch/: camera_follow.launch  darknet_ros.launch  description.launch.xml  gps_follow.launch  gps_waypoint.launch  imu_filter.launch  localization_run_sim.launch  m1_test.launch  move_base.launch  send_follow.launch  send_goals_sim.launch  test.launch  test1.launch  tf_follow.launch  tf_follow_description.launch.xml  tf_follow_move_base.launch  uwb_follow.launch
caddy_bot/params/: base_local_planner_params.yaml  camera_follow_base_local_planner_params.yaml  camera_follow_ekf_params.yaml  camera_follow_local_costmap_params.yaml  camera_follow_move_base_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  ekf_params.yaml  global_costmap_params.yaml  gps_waypoint_base_local_planner_params.yaml  gps_waypoint_ekf_params.yaml  gps_waypoint_global_costmap_params.yaml  gps_waypoint_local_costmap_params.yaml  gps_waypoint_move_base_params.yaml  gps_waypoint_navsat_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navsat_params_sim.yaml  tf_follow_base_local_planner_params.yaml  tf_follow_ekf_params.yaml  tf_follow_global_costmap_params.yaml  tf_follow_local_costmap_params.yaml  tf_follow_move_base_params.yaml  uwb_follow_costmap_common_params.yaml  uwb_follow_global_costmap_params.yaml
caddy_bot/rviz/: DD.rviz  FF.rviz  camera.rviz  follow.rviz  uwb.rviz
caddy_bot/src/: cac_xy.py  camera_follow.cpp  follow.cpp  gps_copy.py  gps_dis.py  gps_follow.cpp  gps_utm.cpp  gps_waypoint.cpp  imu_filter_quaternion_to_euler.py  imu_quaternion_to_euler.py  motor.py  odom_quaternion_to_euler.py  uwb_follow.cpp  uwb_test.py  uwb_tf.cpp
caddy_bot/urdf/: caddy_bot.urdf.xacro  camera_follow_caddy_bot.urdf.xacro  gps_follow_caddy_bot.urdf.xacro  gps_waypoint_caddy_bot.urdf.xacro  tf_follow_caddy_bot.urdf.xacro  uwb_follow_caddy_bot.urdf.xacro
caddy_bot/waypoint_files/: points_sim.txt
caddy_location/: CMakeLists.txt  caddy_locadion.rviz  costmap.rviz  costmap_withoutmap.rviz  package.xml
caddy_location/config/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf_localization.yaml  ekf_se_odom_params.yaml  global_costmap_params.yaml  gps_localization_config.yaml  gps_localization_config.yaml.cp  local_costmap_params.yaml
caddy_location/launch/: amcl.launch  dual_ekf.launch  ekf_localization.launch  ekf_se_odom.launch  (+8 more)
caddy_navigation/: CMakeLists.txt  package.xml
caddy_rtabmap/: CMakeLists.txt  caddy_rtabmap.rviz  package.xml
custom_msg_pkg/: CMakeLists.txt  package.xml
filesend/: CMakeLists.txt  package.xml
nmea_navsat_driver/: package.xml
oroca_ros_tutorials/: CMakeLists.txt  package.xml
vc_gps/: CMakeLists.txt
vc_gps/src/: vc_gps_pub.cpp
yolo_odom/: CMakeLists.txt  package.xml
yolo_odom/launch/: odom.launch
yolo_odom/src/: odom.cpp
(+74 files in other folders)
